# meru-gst

./: .gitignore  MERUGST_PORTING_GUIDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release-desktop.yml
apps/cli/: package.json
apps/cli/src/: index.ts  program.ts
apps/cli/src/commands/: dbf.ts
apps/cli/src/tui/: dbf-browser.ts
apps/cli/src/ui/: output.ts
apps/cli/test/: smoke.test.ts
apps/desktop/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/docs/: invoice-printing-research.md
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial_schema.sql  0002_seed_pdf_sample_data.sql  README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: app-error-boundary.tsx  app-layout.tsx  app-navbar.tsx  app-sidebar.tsx  app-update-button.tsx  light-mode-enforcer.tsx  sonner.tsx
apps/desktop/src/hooks/: use-app-updates.ts
apps/desktop/src/lib/: app-updates.ts  database.ts  invoice-format.ts  navigation.tsx
apps/desktop/src/pages/: home-page.tsx  invoice-create-page.tsx  invoices-page.tsx  master-data-pages.tsx  settings-page.tsx
scripts/: bump-desktop-version.mjs  check-release-privacy.mjs  sync-desktop-version.mjs
