[package]
name = "meru-gst-desktop"
version = "0.1.0"
description = "MERU GST desktop application"
authors = ["MERU GST"]
edition = "2021"

[lib]
name = "meru_gst_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
